<resources>
    <string name="global_btn_ok">OK</string>
    <string name="global_btn_yes">Yes</string>
    <string name="global_btn_cancel">Cancel</string>
    <string name="global_btn_save">Save</string>
    <string name="global_btn_new">New</string>
    <string name="global_btn_edit">Edit</string>
    <string name="global_btn_del">Delete</string>
    <string name="global_btn_refresh">Refresh</string>
    <string name="global_btn_close">Close</string>

    <string name="global_mi_close">Refresh</string>


    <string name="dlg__cannot_start_session">Logged in successfully but cannot start the session because there is a problem with the server. Please try again later.</string>

    <string name="dlg__comm_problem_title">Communication problem</string>
    <string name="dlg__comm_problem_msg">There was a problem communicating with the server. Please try again later.</string>
    <string name="dlg__generic_wait">Please wait…</string>

    <string name="dlg__invalid_autologin__title">Invalid login</string>
    <string name="dlg__invalid_autologin__msg">Cannot auto login. Invalid username or password. Please tap "Login" button and check if your username and password are correct.</string>

    <string name="dlg__invalid_login__title">Invalid login</string>
    <string name="dlg__invalid_login__msg">Invalid username or password.</string>

    <string name="dlg__loggin_in">Logging in…</string>
    <string name="dlg__loggin_out">Logging out…</string>

    <string name="dlg__need_relogin__msg">You need to login again because you session has expired due to inactivity.</string>

    <string name="dlg__no_inet__title">No internet</string>
    <string name="dlg__no_inet__msg">There is no connection to internet.</string>

    <string name="dlg__upgrade_needed__title">Upgrade needed</string>
    <string name="dlg__upgrade_needed__msg">You app version is old and unsupported. You need to upgrade.</string>

    <string name="act__main__mi_screen_name">Set your \'Public name\'</string>
    <string name="act__main__mi_registration">Registration</string>
    <string name="act__main__mi_full_registration">Full registration</string>
    <string name="act__main__mi_logout">Logout</string>
    <string name="act__main__mi_choose_login">Select login method</string>

    <string name="act__main__btn_login">Login</string>
    <string name="act__main__tv_no_inet">No internet connection</string>
    <string name="act__main__tv_logged_in">You are logged as &lt;b>%s&lt;/b></string>
    <string name="act__main__tv_logged_in_auto">You are logged as &lt;b>#user%s&lt;/b> (automatic registration)</string>
    <string name="act__main__btn_register">Register</string>

    <string name="act__main__mi_login_as_different">Login as different user</string>
    <string name="act__main__btn_admin_users">Admin users</string>
    <string name="act__main__btn_users">Users</string>


    <string name="act__login__et_username_hint">Username</string>
    <string name="act__login__et_password_hint">Password</string>
    <string name="act__login__btn_login">Login</string>
    <string name="act__login__title">Login</string>

    <string name="act__admin_users_list__title">Admin users</string>
    <string name="act__admin_user_list__tv_empty">No admin users</string>
    <string name="act__admin_user_list__mi_create">Create new admin</string>

    <string name="act__admin_user_manage__tv_username">Username</string>
    <string name="act__admin_user_manage__tv_name">Name</string>
    <string name="act__admin_user_manage__tv_superadmin">Superadmin</string>
    <string name="act__admin_user_manage__tv_disabled">Disabled</string>

    <string name="act__admin_user_manage__mi_disable">Disable</string>
    <string name="act__admin_user_manage__mi_enable">Enable</string>
    <string name="act__admin_user_manage__mi_chpwd">Change password</string>

    <string name="act__admin_user_create__et_username">Username</string>
    <string name="act__admin_user_create__et_name">Name</string>
    <string name="act__admin_user_create__cb_superadmin">Super admin</string>
    <string name="act__admin_user_create__et_password">Password</string>
    <string name="act__admin_user_create__et_password2">Password again</string>

    <string name="act__admin_user_create__mi_save">Save</string>
    <string name="act__admin_user_create__err_mandatory_field">Mandatory field</string>
    <string name="act__admin_user_create__err_invalid_username">Invalid username. Must be at least 3 characters, starting with letter.</string>
    <string name="act__admin_user_create__err_invalid_name">Invalid name. Must be at least 2 characters, starting with letter.</string>
    <string name="act__admin_user_create__err_password_too_short">Password is too short. Must be at least {} characters.</string>
    <string name="act__admin_user_create__err_passwords_dont_match">Passwords don\'t match.</string>
    <string name="act__admin_user_create__err_username_taken_msg">This username is already used for another user. Please choose a different one.</string>


    <string name="act__users_btn_search">Search</string>

    <string name="dlg__no_user_found_msg">No users found matching your criteria</string>

    <string name="act__user_manage__tv_username">Username</string>
    <string name="act__user_manage__tv_name">Name</string>
    <string name="act__user_manage__tv_disabled">Disabled</string>

    <string name="act__user_manage__mi_disable">Disable</string>
    <string name="act__user_manage__mi_enable">Enable</string>

</resources>
