<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".units.admin_user.admin_user_manage.ActAdminUserManage">


    <TextView
        android:text="@string/act__admin_user_manage__tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_username"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/act__admin_user_manage__tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_name"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="#008800"
        android:id="@+id/tv_superadmin"
        android:layout_marginTop="10dp"
        android:text="@string/act__admin_user_manage__tv_superadmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#ff0000"
        android:id="@+id/tv_disabled"
        android:layout_marginTop="10dp"
        android:text="@string/act__admin_user_manage__tv_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
